--- a/AndroidDemo/res/values/strings.xml
+++ b/AndroidDemo/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="app_name">AndroidDemo</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="fragment_static_text">静态加载：首先要自定义一个fragment，继承fragment，该fragment有自己的控件,可以独立响应点击事件。
+        在其他视图中应用该fragment即可，在布局文件中通过标签加载的fragment即为为静态加载fragment（个人在viewpager中的一个view中静态加载一个fragment遇到一个问题是需要将宽度设为match_parent）。
+        该fragment可被应用到任何布局中，其中的控件和事件不变，
+        注意：在宿主的视图文件中引用静态加载fragment时需要给一个唯一的标识，ID或name都可以，
+        另外，在宿主文件中可以直接访问fragment中的控件</string>
 
 </resources>
