--- a/AndroidDemo/readme
+++ b/AndroidDemo/readme
@@ -1,2 +1,7 @@
-1. fragment
-首先创建一个子类继承
+Demo for Android
+
+contain four parts:
+1. study record 
+2. Collection of web sites
+3. other(note)
+4. a simple IM tool
